# static-sox

./: .gitignore  README.md  activate.sh  lint.sh  make_venv.py  pyproject.toml  requirements.testing.txt  setup.py  tox.ini  upload_package.sh
src/static_sox/: __init__.py  _add_paths.py  run.py
tests/: test_add_paths.py  test_cli.py  test_run.py
