[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "static-sox"
description = "Static binaries for sox for Mac/Win32/Linux"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "requests",
]
# Change this with the version number bump.
# Also make the change in zcmds/version.py
version = "1.0.0"

[tool.mypy]
ignore_missing_imports = true
